skins/larry/mail.css
/* ... */
.rcmaddcontact {
	position: relative;
	top: 1px;
	margin-left: 0.5em;
}

.rcmaddcontact imp {
	width: 20px;
	height: 13px;
}

#preview-allheaders {
	display: none;
}

#preview-allheaders td.header-title,
#preview-shortheaders td.header-title {
	padding-left: 0;
}

#preview-shortheaders td.header {
	padding-right: 18px;
}

.moreheaderstoggle {
	display: block;
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	width: 18px;
	padding: 0;
	outline: none;
	background: #f2f2f2;
	background: -moz-linear-gradient(left, #fbfbfb 0, #e9e9e9 100%);
	background: -webkit-gradient(linear, left top, right top, color-stop(0,#fbfbfb), color-stop(100%,#e9e9e9));
	background: -o-linear-gradient(left, #fbfbfb 0, #e9e9e9 100%);
	background: -ms-linear-gradient(left, #fbfbfb 0, #e9e9e9 100%);
	background: linear-gradient(left, #fbfbfb 0, #e9e9e9 100%);
	border-right: 1px solid #dfdfdf;
	border-radius: 3px 0 0 0; /* for Opera */
}

.moreheaderstoggle:focus {
	background: #f2f2f2;
	background: -moz-linear-gradient(left, #66bcd9 0, #49b3d2 100%);
	background: -webkit-gradient(linear, left top, right top, color-stop(0,#66bcd9), color-stop(100%,#49b3d2));
	background: -o-linear-gradient(left, #66bcd9 0, #49b3d2 100%);
	background: -ms-linear-gradient(left, #66bcd9 0, #49b3d2 100%);
	background: linear-gradient(left, #66bcd9 0, #49b3d2 100%);
	border-right-color: #149cc5;
}

.moreheaderstoggle .iconlink {
	display: inline-block;
	position: absolute;
	top: 8px;
	left: 0;
	width: 18px;
	height: 16px;
	background: url(images/buttons.png) -27px -242px no-repeat;
}

.moreheaderstoggle.remove .iconlink {
	top: auto;
	bottom: 5px;
	background-position: -5px -242px;
}

#full-headers {
	position: relative;
}

div.more-headers {
	position: absolute;
	top: -12px;
	right: 10px;
	width: 12px;
	height: 10px;
	cursor: pointer;
	background: url(images/buttons.png) center -1579px no-repeat;
}

div.hide-headers {
	background-position: center -1590px;
}

#all-headers {
	position: relative;
	margin: 4px 10px;
	padding: 0;
	height: 180px;
	border: 1px solid #ccc;
	border-radius: 4px;
	background: #fdfdfd;
	-moz-box-shadow: inset 0 0 1px 1px rgba(0,0,0, 0.1);
	-webkit-box-shadow: inset 0 0 1px 1px rgba(0,0,0, 0.1);
	-o-box-shadow: inset 0 0 1px 1px rgba(0,0,0, 0.1);
	box-shadow: inset 0 0 1px 1px rgba(0,0,0, 0.1);
}

#headers-source {
	display: none;
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	padding: 3px 6px;
	overflow: auto;
	text-align: left;
	color: #333;
}

#messageheader.previewheader #all-headers {
	margin-left: 0;
}

#messageheader.previewheader {
	position: relative;
	height: auto;
	min-height: 52px;
	padding: 0 0 3px 72px;
}

#messageheader.previewheader h3.subject {
	padding: 8px 8px 2px 0;
}

#messageheader.previewheader #contactphoto {
	display: block;
	position: absolute;
	top: 11px;
	left: 30px;
	width: 32px;
	height: 32px;
	overflow: hidden;
	background: url(images/contactpic_32px.png) center center no-repeat #fff;
	border-radius: 3px;
}

#messageheader.previewheader #contactphoto img {
	width: 32px;
	height: auto;
	border-radius: 3px;
}

#messageheader .message-headers {
	min-height: 60px;
}

#messageheader #contactphoto {
	display: block;
	position: absolute;
	top: 34px;
	left: 30px;
	width: 48px;
	height: 48px;
	overflow: hidden;
	border-radius: 4px;
	border: 1px solid #e6e6e6;
	background: url(images/contactpic_48px.png) center center no-repeat #fff;
}

#messageheader #contactphoto img {
	width: 48px;
	height: auto;
	border-radius: 4px;
}

#messageheader #countcontrols,
#messageheader #formatcontrols {
	position: absolute;
	top: 8px;
	right: 8px;
	text-align: right;
	white-space: nowrap;
}

#messageheader #formatcontrols {
	top: 38px;
	right: 8px;
}

#messageheader .pagenav .countdisplay {
	min-width: 0;
	padding-right: 0.5em;
	white-space: nowrap;
}

#messagecontent .leftcol,
#messagepreview .leftcol {
	margin-right: 252px;
	overflow-x: auto;
}

#messagecontent .rightcol,
#messagepreview .rightcol {
	float: right;
/*
	position: absolute;
	top: 10px;
	right: 10px;
	height: 90%;
*/
	width: 230px;
	margin: 8px;
	min-height: 200px;
	background: #f0f0f0;
	padding: 8px;
	border-radius: 4px;
}

#messagebody {
	position: relative;
	margin: 8px;
}

#message-objects div,
#messagebody span.part-notice {
	margin: 8px;
}

#message-objects div.notice {
	display: block;
	color: #960;
	border: 1px solid #ffdf0e;
	background-color: #fef893;
	background-position: 5px -83px;
	padding: 6px 12px 6px 30px;
	white-space: normal;
}

#message-objects div a.button,
#messagebody span.part-notice a.button {
	margin-left: 10px;
	margin-top: -1px;
}

div.message-part,
div.message-htmlpart,
div.message-partheaders {
	padding: 10px 2px;
	border-top: 1px solid #ccc;
}

#messagebody div:first-child {
	padding-top: 0;
	border-top: 0;
}

div.message-part div.pre {
	margin: 0;
	padding: 0;
	font-family: monospace;
	font-size: 12px;
}

div.message-part span.sig {
	color: #666;
}

div.message-part blockquote {
	color: blue;
	border-left: 2px solid blue;
	border-right: 2px solid blue;
	background-color: #F6F6F6;
	margin: 2px 0;
	padding: 0 0.4em;
	overflow: hidden;
	text-overflow: ellipsis;
}

div.message-part blockquote blockquote {
	color: green;
	border-left: 2px solid green;
	border-right: 2px solid green;
}

div.message-part blockquote blockquote blockquote {
	color: #900;
	border-left: 2px solid #b00;
	border-right: 2px solid #b00;
}

div.message-partheaders {
	margin-top: 8px;
	padding: 8px 0;
}

div.message-partheaders .headers-table {
	width: 100%;
}

div.message-partheaders .headers-table td.header-title {
	width: auto;
	padding-left: 0;
}

div.message-partheaders .headers-table td.header {
	width: 88%;
}

#messagebody > hr {
	color: #fff;
	background: #fff;
	border: 0;
	border-bottom: 2px solid #f0f0f0;
}

#messagebody fieldset.image-attachment {
	border: 0;
	border-top: 1px solid #ccc;
	margin-top: 1em;
}

#messagebody fieldset.image-attachment p > img {
	max-width: 80%;
}
/* ... */

